# nginx-security-monitor

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .salt  .vale.ini  LICENSE  MANIFEST.ini  Makefile  README.md  dev-requirements.txt  docs-metrics.json  harden.sh  install.sh  mkdocs.yml  nginx-security-monitor.sh  pyproject.toml  schema.yml  schema.yml.sig  security_integrations_util.py  setup.py  vale-error.txt
.github/workflows/: documentation.yml  tests.yml
config/: patterns.json  service-settings.yaml  settings.yaml
docs/: ALERT_SYSTEMS.md  API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONFIGURATION_SYSTEM.md  CONTRIBUTING.md  ELITE_TEST_COVERAGE_PLAN.md  ENCRYPTION_GUIDE.md  INSTALLATION.md  INTEGRATION_COOKBOOK.md  MITIGATION_STRATEGIES.md  OPERATIONS_GUIDE.md  PATTERN_DETECTION.md  PERFORMANCE_TUNING.md  PLUGIN_DEVELOPMENT.md  QUICK_START_TUTORIAL.md  README.md  SECURITY_FEATURES.md  SECURITY_INTEGRATIONS.md  SERVICE_PROTECTION.md  STYLE_GUIDE.md  TESTING.md  TESTING_KEYS.md  TROUBLESHOOTING.md  USE_CASES.md  _template.md  docgen-config.yaml  getting-started.md  index.md
docs/api/: alert_manager.md  config_manager.md  config_schema.md  crypto_utils.md  index.md  log_parser.md  (+11 more)
examples/: README.md  config_usage_example.py
nginx_security_monitor/: __init__.py  alert_manager.py  config_manager.py  config_schema.py  crypto_utils.py  email_alert.py  encrypt_config.py  log_parser.py  log_processor.py  mitigation.py  monitor_service.py  network_security.py  pattern_detector.py  plugin_system.py  security_coordinator.py  security_integrations.py  security_integrations_util.py  service_protection.py  sms_alert.py  threat_processor.py  universal_log_handler.py
plugins/: README.md  test_plugins.py
scripts/: check_markdown_links.py  test_docs_automation.sh
site/: 404.html  index.html  metrics-report.json  sitemap.xml
src/: alert_manager.py  crypto_utils.py  log_parser.py  log_processor.py  mitigation.py  monitor_service.py  network_security.py  pattern_detector.py  plugin_system.py  security_coordinator.py  security_integrations.py  service_protection.py  threat_processor.py
systemd/: nginx-security-monitor.service
tests/: conftest.py  test_alert_manager.py  test_alerts.py  test_config_manager.py  test_config_manager_advanced.py  test_config_manager_final_coverage.py  test_config_schema_comprehensive.py  test_crypto_utils.py  test_crypto_utils_advanced.py  test_email_alert.py  test_encrypt_config_util.py  test_log_parser.py  test_log_processor.py  test_log_processor_advanced.py  test_mitigation.py  test_mitigation_advanced.py  test_monitor_service.py  test_network_security.py  test_pattern_detector.py  test_plugin_system.py  test_salt_creation.py  test_security_coordinator.py  test_security_integrations.py  test_security_integrations_util.py  test_service_protection.py  test_sms_alert.py  test_threat_processor.py
(+148 files in other folders)
